Consolidate networking directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SHARED_SOURCES
     src/World/WorldManager.cpp
     src/Core/Networking/FinalverseClient.cpp
     src/Core/Networking/MessageProtocol.cpp
+    src/Core/Networking/NetworkClient.cpp
     src/Core/Audio/AudioEngine.cpp
     src/Core/Audio/SpatialAudioSystem.cpp
     src/Core/Input/InteractionManager.cpp
