--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,6 @@ if(NOT APPLE)
     message(FATAL_ERROR "FinalStorm currently only supports macOS and iOS")
 endif()
 
-# Options
-option(BUILD_IOS_ONLY "Build only the iOS target" OFF)
-option(BUILD_MAC_ONLY "Build only the macOS target" OFF)
-
-if(BUILD_IOS_ONLY AND BUILD_MAC_ONLY)
-    message(FATAL_ERROR "Only one of BUILD_IOS_ONLY or BUILD_MAC_ONLY can be ON")
-endif()
-
 # Output directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -40,18 +32,26 @@ set(CORE_SOURCES
     src/Scene/SceneNode.cpp
     src/Scene/Scene.cpp
     src/Scene/SceneManager.cpp
+    src/Scene/CameraController.cpp
     src/World/Entity.cpp
     src/World/WorldManager.cpp
     src/Services/ServiceEntity.cpp
     src/Services/ServiceFactory.cpp
+    src/Services/ServiceNode.cpp
+    src/Services/ServiceVisualizations.cpp
     src/Environment/EnvironmentController.cpp
     src/UI/UI3DPanel.cpp
+    src/UI/Panel.cpp
     src/UI/HolographicDisplay.cpp
     src/UI/InteractiveOrb.cpp
     src/UI/ServiceDiscoveryUI.cpp
     src/Core/Input/InteractionManager.cpp
     src/Network/FinalverseClient.cpp
+    src/Network/NetworkClient.cpp
     src/Network/MessageProtocol.cpp
+    src/Core/Audio/AudioEngine.cpp
+    src/Core/Audio/SpatialAudioSystem.cpp
+    src/Visual/DataVisualizer.cpp
 )
 
 set(METAL_SOURCES
@@ -74,39 +74,26 @@ set(IOS_SOURCES
     src/Platform/iOS/GameViewController.mm
 )
 
-# Shaders
-file(GLOB SHADER_FILES ${CMAKE_SOURCE_DIR}/shaders/*.metal)
-
-add_custom_target(Shaders
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/compile_shaders.sh --all
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMENT "Compiling Metal shaders"
+# Create both macOS and iOS targets by default
+add_executable(FinalStorm-macOS MACOSX_BUNDLE
+    ${CORE_SOURCES}
+    ${METAL_SOURCES}
+    ${MACOS_SOURCES}
 )
 
-########################################################################
-# Targets
-########################################################################
+add_executable(FinalStorm-iOS MACOSX_BUNDLE
+    ${CORE_SOURCES}
+    ${METAL_SOURCES}
+    ${IOS_SOURCES}
+)
 
-if(NOT BUILD_IOS_ONLY)
-    add_executable(FinalStorm-macOS MACOSX_BUNDLE
-        ${CORE_SOURCES}
-        ${METAL_SOURCES}
-        ${MACOS_SOURCES}
-    )
-endif()
+# Common include directories for both targets
+set(COMMON_INCLUDE_DIRS
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
-if(NOT BUILD_MAC_ONLY)
-    add_executable(FinalStorm-iOS MACOSX_BUNDLE
-        ${CORE_SOURCES}
-        ${METAL_SOURCES}
-        ${IOS_SOURCES}
-    )
-endif()
-
-########################################################################
-# Target configuration
-########################################################################
-
+# Common frameworks
 set(COMMON_FRAMEWORKS
     "-framework Foundation"
     "-framework Metal"
@@ -116,87 +103,69 @@ set(COMMON_FRAMEWORKS
     Threads::Threads
 )
 
-if(NOT BUILD_IOS_ONLY)
-    set_target_properties(FinalStorm-macOS PROPERTIES
-        MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm"
-        MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm"
-        MACOSX_BUNDLE_BUNDLE_VERSION "0.1.0"
-        MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1"
-        MACOSX_DEPLOYMENT_TARGET "11.0"
-    )
-    target_include_directories(FinalStorm-macOS PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-    )
-    target_link_libraries(FinalStorm-macOS PRIVATE
-        ${COMMON_FRAMEWORKS}
-        "-framework Cocoa"
-        "-framework AppKit"
-    )
-    target_compile_definitions(FinalStorm-macOS PRIVATE USE_SIMD)
-    add_dependencies(FinalStorm-macOS Shaders)
-    add_custom_command(TARGET FinalStorm-macOS POST_BUILD
+# Common compile definitions
+set(COMMON_COMPILE_DEFS
+    USE_SIMD
+)
+
+# Configure macOS target
+set_target_properties(FinalStorm-macOS PROPERTIES
+    MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm"
+    MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm"
+    MACOSX_BUNDLE_BUNDLE_VERSION "0.1.0"
+    MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1"
+    MACOSX_DEPLOYMENT_TARGET "11.0"
+    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.finalverse.finalstorm.macos"
+)
+
+target_include_directories(FinalStorm-macOS PRIVATE ${COMMON_INCLUDE_DIRS})
+target_link_libraries(FinalStorm-macOS PRIVATE
+    ${COMMON_FRAMEWORKS}
+    "-framework Cocoa"
+    "-framework AppKit"
+)
+target_compile_definitions(FinalStorm-macOS PRIVATE ${COMMON_COMPILE_DEFS})
+
+# Configure iOS target
+set_target_properties(FinalStorm-iOS PROPERTIES
+    MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm"
+    MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm"
+    MACOSX_BUNDLE_BUNDLE_VERSION "0.1.0"
+    MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1"
+    XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "14.0"
+    XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
+    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.finalverse.finalstorm.ios"
+    XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ""
+)
+
+target_include_directories(FinalStorm-iOS PRIVATE ${COMMON_INCLUDE_DIRS})
+target_link_libraries(FinalStorm-iOS PRIVATE
+    ${COMMON_FRAMEWORKS}
+    "-framework UIKit"
+    "-framework ARKit"
+)
+target_compile_definitions(FinalStorm-iOS PRIVATE ${COMMON_COMPILE_DEFS})
+
+# Copy resources for both targets
+foreach(target FinalStorm-macOS FinalStorm-iOS)
+    add_custom_command(TARGET ${target} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_SOURCE_DIR}/assets
-        ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets
+        $<TARGET_FILE_DIR:${target}>/../Resources/assets
     )
-    add_custom_command(TARGET FinalStorm-macOS POST_BUILD
+    
+    add_custom_command(TARGET ${target} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${CMAKE_SOURCE_DIR}/shaders
-        ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/shaders
+        $<TARGET_FILE_DIR:${target}>/../Resources/shaders
     )
-endif()
+endforeach()
 
-if(NOT BUILD_MAC_ONLY)
-    set_target_properties(FinalStorm-iOS PROPERTIES
-        MACOSX_BUNDLE_GUI_IDENTIFIER "com.finalverse.finalstorm"
-        MACOSX_BUNDLE_BUNDLE_NAME "FinalStorm"
-        MACOSX_BUNDLE_BUNDLE_VERSION "0.1.0"
-        MACOSX_BUNDLE_SHORT_VERSION_STRING "0.1"
-        MACOSX_DEPLOYMENT_TARGET "14.0"
-        OSX_ARCHITECTURES "arm64"
-        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
-    )
-    target_include_directories(FinalStorm-iOS PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-    )
-    target_link_libraries(FinalStorm-iOS PRIVATE
-        ${COMMON_FRAMEWORKS}
-        "-framework UIKit"
-        "-framework ARKit"
-    )
-    target_compile_definitions(FinalStorm-iOS PRIVATE USE_SIMD)
-    add_dependencies(FinalStorm-iOS Shaders)
-    add_custom_command(TARGET FinalStorm-iOS POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/assets
-        ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets
-    )
-    add_custom_command(TARGET FinalStorm-iOS POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/shaders
-        ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/shaders
-    )
-endif()
-
-########################################################################
 # Installation
-########################################################################
-
-if(NOT BUILD_IOS_ONLY)
-    install(TARGETS FinalStorm-macOS
-        BUNDLE DESTINATION .
-        RUNTIME DESTINATION bin
-    )
-endif()
-
-if(NOT BUILD_MAC_ONLY)
-    install(TARGETS FinalStorm-iOS
-        BUNDLE DESTINATION .
-        RUNTIME DESTINATION bin
-    )
-endif()
+install(TARGETS FinalStorm-macOS FinalStorm-iOS
+    BUNDLE DESTINATION .
+    RUNTIME DESTINATION bin
+)
 
 install(DIRECTORY shaders DESTINATION bin)
 install(DIRECTORY assets DESTINATION bin)
